# RemovePicWatermark

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py  run_gui.bat  run_gui.py  run_gui_debug.bat
configs/: default.json
packaging/: gui_entry.py  patch_torch_ufuncs.py  pyi_rth_app_root.py  remove_pic_watermark_gui.spec  user_README.txt  write_dist_meta.py
scripts/: build_gui_onedir.ps1  check_gpu.ps1  selftest_detect_pipeline.py
src/remove_pic_watermark/: __init__.py  cli.py  config.py  device_info.py  image_io.py  masking.py  models.py  paths.py  pipeline.py  six_patch.py  stdio_fix.py  workspace.py
src/remove_pic_watermark/backends/: __init__.py  iopaint.py  opencv.py
src/remove_pic_watermark/detectors/: __init__.py  base.py  features.py  fixed_box.py  matching.py  orchestrator.py  residual_ai.py  template_stamp.py  yolo_watermark.py
src/remove_pic_watermark/gui/: __init__.py  app.py  branding.py  main_window.py  theme_style.py  workers.py
src/remove_pic_watermark/gui/pages/: __init__.py  batch_page.py  profiles_page.py  refine_page.py  results_page.py  train_page.py
src/remove_pic_watermark/gui/state/: prefs.py
src/remove_pic_watermark/gui/widgets/: __init__.py  (+7 more)
src/remove_pic_watermark/profiles/: __init__.py  models.py  store.py
src/remove_pic_watermark/services/: __init__.py  ai_matting.py  edgesam_segment.py  job_service.py  profile_service.py  template_builder.py  yolo_dataset.py
tests/: test_core.py  test_detect_orchestrator.py  test_device_info.py  test_features.py  test_multi_instance.py  test_yolo_dataset.py  test_yolo_propose.py
